Уточняет отступы и расположение элементов на мобильной версии страницы Форм по PixelPerfect

--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
   <body class="page__body">
     <div class="page__wrapper">
       <header class="page-header">
-        <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs"> <!-- Классы "main-nav--closed" и "main-nav--opened" закрывают и открывают мобильное меню, а также меняют внешний вид кнопки закрытия/открытия -->
+        <nav class="page-header__main-nav main-nav page-header__main-nav--inner main-nav--closed main-nav--nojs"> <!-- Классы "main-nav--closed" и "main-nav--opened" закрывают и открывают мобильное меню, а также меняют внешний вид кнопки закрытия/открытия -->
           <a class="main-nav__logo logo" href="index.html">
             <img class="logo__image" src="./img/logo.svg" width="185" height="96" alt="Логотип города Седона">
           </a>
@@ -112,7 +112,7 @@
               </fieldset>
               <div class="form__submit-wrapper">
                 <button class="form__button button" type="submit" name="send-form">Отправить отзыв</button>
-                <p class="form__footnote"><small><sup>*</sup> — Обязательные поля</small></p>
+                <p class="form__footnote"><sup>*</sup> — Обязательные поля</p>
               </div>
             </form>
           </div>
