--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Седона</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body class="page__body">
+  <body class="page__body"> <!--Класс "page__body--modal-show" убирает скрол страницы при открытии модального окна-->
     <div class="page__wrapper">
       <header class="page-header">
         <nav class="page-header__main-nav main-nav page-header__main-nav--inner main-nav--closed main-nav--nojs"> <!-- Классы "main-nav--closed" и "main-nav--opened" закрывают и открывают мобильное меню, а также меняют внешний вид кнопки закрытия/открытия -->
