Добавляет в разметку на страницу Каталога контентные изображения в формате WebP - подготовка к автоматизации

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -91,6 +91,10 @@
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="./img/gallery-photo-road-2-desktop@1x.webp 1x, ./img/gallery-photo-road-2-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="./img/gallery-photo-road-2-tablet@1x.webp 1x, ./img/gallery-photo-road-2-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="./img/gallery-photo-road-2-mobile@1x.webp 1x, ./img/gallery-photo-road-2-mobile@2x.webp 2x">
+
                     <source media="(min-width: 1200px)" srcset="./img/gallery-photo-road-2-desktop@1x.jpg 1x, ./img/gallery-photo-road-2-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="./img/gallery-photo-road-2-tablet@1x.jpg 1x, ./img/gallery-photo-road-2-tablet@2x.jpg 2x">
                     <img class="photo-gallery__item-image" src="./img/gallery-photo-road-2-mobile@1x.jpg" srcset="./img/gallery-photo-road-2-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография горной дороги">
@@ -112,6 +116,10 @@
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="./img/gallery-photo-bridge-desktop@1x.webp 1x, ./img/gallery-photo-bridge-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="./img/gallery-photo-bridge-tablet@1x.webp 1x, ./img/gallery-photo-bridge-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="./img/gallery-photo-bridge-mobile@1x.webp 1x, ./img/gallery-photo-bridge-mobile@2x.webp 2x">
+
                     <source media="(min-width: 1200px)" srcset="./img/gallery-photo-bridge-desktop@1x.jpg 1x, ./img/gallery-photo-bridge-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="./img/gallery-photo-bridge-tablet@1x.jpg 1x, ./img/gallery-photo-bridge-tablet@2x.jpg 2x">
                     <img class="photo-gallery__item-image" src="./img/gallery-photo-bridge-mobile@1x.jpg" srcset="./img/gallery-photo-bridge-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография Моста Дьявола">
@@ -140,6 +148,10 @@
                     <span class="video-presentation__play">Воспроизвести</span>
                   </button>
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="./img/video-desktop@1x.webp 1x, ./img/video-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="./img/video-tablet@1x.webp 1x, ./img/video-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="./img/video-mobile@1x.webp 1x, ./img/video-mobile@2x.webp 2x">
+
                     <source media="(min-width: 1200px)" srcset="./img/video-desktop@1x.jpg 1x, ./img/video-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="./img/video-tablet@1x.jpg 1x, ./img/video-tablet@2x.jpg 2x">
                     <img class="video-presentation__video-file" src="./img/video-mobile@1x.jpg" srcset="./img/video-mobile@2x.jpg 2x" width="280" height="177" alt="Видеопрезентация о городе Седона">
