--- a/7/index.html
+++ b/7/index.html
@@ -68,7 +68,7 @@
                   </li>
                   <li class="benefits__item benefits__item--gift">
                     <h3 class="benefits__title title">Сувениры</h3>
-                    <p class="benefits__description">Не только китайского, но и местного производства!</p>
+                    <p class="benefits__description">Не только китайского,<br class="benefits__break"> но и местного производства!</p>
                   </li>
                 </ul>
               </li>
