--- a/7/form.html
+++ b/7/form.html
@@ -7,10 +7,10 @@
     <link href="css/style.css" rel="stylesheet">
     <base href="https://htmlacademy-adaptive.github.io/488659-sedona-26/7/">
 </head>
-  <body class="page__body">
+  <body class="page__body"> <!--Класс "page__body--modal-show" убирает скрол страницы при открытии модального окна-->
     <div class="page__wrapper">
       <header class="page-header">
-        <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs"> <!-- Классы "main-nav--closed" и "main-nav--opened" закрывают и открывают мобильное меню, а также меняют внешний вид кнопки закрытия/открытия -->
+        <nav class="page-header__main-nav main-nav page-header__main-nav--inner main-nav--closed main-nav--nojs"> <!-- Классы "main-nav--closed" и "main-nav--opened" закрывают и открывают мобильное меню, а также меняют внешний вид кнопки закрытия/открытия -->
           <a class="main-nav__logo logo" href="index.html">
             <img class="logo__image" src="./img/logo.svg" width="185" height="96" alt="Логотип города Седона">
           </a>
@@ -113,7 +113,7 @@
               </fieldset>
               <div class="form__submit-wrapper">
                 <button class="form__button button" type="submit" name="send-form">Отправить отзыв</button>
-                <p class="form__footnote"><small><sup>*</sup> — Обязательные поля</small></p>
+                <p class="form__footnote"><sup>*</sup> — Обязательные поля</p>
               </div>
             </form>
           </div>
