--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body"> <!--Класс "page__body--modal-show" убирает скрол страницы при открытии модального окна-->
     <div class="page__wrapper">
