Добавляет явный фокус логотипу на главной странице, уточняет состояния элементов при клике на них

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
     <div class="page__wrapper">
       <header class="page-header">
         <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs"> <!-- Классы "main-nav--closed" и "main-nav--opened" закрывают и открывают мобильное меню, а также меняют внешний вид кнопки закрытия/открытия -->
-          <a class="main-nav__logo logo">
+          <a class="main-nav__logo logo" href="#">
             <img class="logo__image" src="./img/logo.svg" width="185" height="96" alt="Логотип города Седона">
           </a>
           <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
